2012-03-29  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (DLL_OFILES): Add fhandler_dev.o.
	* devices.h (DEV_DEV_MAJOR): Define.
	(FH_DEV): Redefine in terms of DEV_DEV_MAJOR.
	(ext_dev_storage): Declare.
	(dev_storage_size): Declare.
	(dev_dev_storage): Declare.
	(dev_dev): Define.
	(isdev_dev): Define.
	* devices.in (dev_dev_storage): Activate.
	(ext_dev_storage): Define as externally available pointer to
	dev_storage.
	(dev_storage_size): Define to contain number of dev_storage elements.
	* dir.cc (rmdir): Handle /dev as always not empty.
	* dtable.cc (fh_alloc): Handle DEV_DEV_MAJOR.
	* fhandler.h (fhandler_dev): New class, derived from fhandler_disk_file.
	(fhandler_union): Add fhandler_dev member.
	* fhandler_disk_file.cc (class __DIR_mounts): Handle /dev directory
	to make sure it always exists.
	* fhandler_dev.cc: New file implementing /dev.
	* globals.cc (ro_u_dev): New R/O unicode string.
	* path.cc (path_conv::check): Handle FH_DEV device.

2012-03-29  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler_console.cc (fhandler_console::set_unit): Don't succeed
	unless we are opening a console actually associated with this process.

2012-03-29  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (acl32): Fix potential crash if build_fh_name returns NULL.

2012-03-29  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* exceptions.cc (ctrl_c_handler): Don't generate a SIGINT if we've
	execed a non-cygwin process.  Let the Windows process deal with it
	itself.

2012-03-28  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* sigproc.cc (proc_terminate): Avoid releasing myself.

2012-03-28  Corinna Vinschen  <corinna@vinschen.de>

	* times.cc (clock_setres): Set minperiod to period.

2012-03-27  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (process_tab): Add entry for mountinfo.
	(format_process_mountstuff): New function, derived from
	format_process_mounts.  Only open another user's user_info shared