@@ -23,11 +23,12 @@ typedef __dev32_t _dev_t;
 #define MAX_CONSOLES 63
 enum fh_devices
 {
-  FH_TTY     = FHDEV (5, 0),
-  FH_CONSOLE = FHDEV (5, 1),
-  FH_PTMX    = FHDEV (5, 2),
-  FH_CONIN   = FHDEV (5, 255),
-  FH_CONOUT  = FHDEV (5, 254),
+  DEV_TTY_MAJOR = 5,
+  FH_TTY     = FHDEV (DEV_TTY_MAJOR, 0),
+  FH_CONSOLE = FHDEV (DEV_TTY_MAJOR, 1),
+  FH_PTMX    = FHDEV (DEV_TTY_MAJOR, 2),
+  FH_CONIN   = FHDEV (DEV_TTY_MAJOR, 255),
+  FH_CONOUT  = FHDEV (DEV_TTY_MAJOR, 254),
 
   DEV_CONS_MAJOR = 3,
   FH_CONS     = FHDEV (DEV_CONS_MAJOR, 0),
@@ -50,24 +51,25 @@ enum fh_devices
 
   /* begin /proc directories */
 
-  FH_PROC_MIN_MINOR = FHDEV (0, 200),
-  FH_PROCSYSVIPC = FHDEV (0, 249),
-  FH_PROCSYS = FHDEV (0, 250),
-  FH_PROCESSFD = FHDEV (0, 251),
-  FH_PROCNET = FHDEV (0, 252),
-  FH_REGISTRY= FHDEV (0, 253),
-  FH_PROCESS = FHDEV (0, 254),
-  FH_PROC    = FHDEV (0, 255),
-  FH_PROC_MAX_MINOR = FHDEV (0, 255),
+  DEV_VIRTFS_MAJOR = 0,
+  FH_PROC_MIN_MINOR = FHDEV (DEV_VIRTFS_MAJOR, 200),
+  FH_PROCSYSVIPC = FHDEV (DEV_VIRTFS_MAJOR, 249),
+  FH_PROCSYS = FHDEV (DEV_VIRTFS_MAJOR, 250),
+  FH_PROCESSFD = FHDEV (DEV_VIRTFS_MAJOR, 251),
+  FH_PROCNET = FHDEV (DEV_VIRTFS_MAJOR, 252),
+  FH_REGISTRY= FHDEV (DEV_VIRTFS_MAJOR, 253),
+  FH_PROCESS = FHDEV (DEV_VIRTFS_MAJOR, 254),
+  FH_PROC    = FHDEV (DEV_VIRTFS_MAJOR, 255),
+  FH_PROC_MAX_MINOR = FHDEV (DEV_VIRTFS_MAJOR, 255),
 
   /* end /proc directories */
 
-  FH_PIPE    = FHDEV (0, 199),
-  FH_PIPER   = FHDEV (0, 198),
-  FH_PIPEW   = FHDEV (0, 197),
-  FH_FIFO    = FHDEV (0, 196),
-  FH_FS      = FHDEV (0, 195),  /* filesystem based device */
-  FH_NETDRIVE= FHDEV (0, 194),
+  FH_PIPE    = FHDEV (DEV_VIRTFS_MAJOR, 199),
+  FH_PIPER   = FHDEV (DEV_VIRTFS_MAJOR, 198),
+  FH_PIPEW   = FHDEV (DEV_VIRTFS_MAJOR, 197),
+  FH_FIFO    = FHDEV (DEV_VIRTFS_MAJOR, 196),
+  FH_FS      = FHDEV (DEV_VIRTFS_MAJOR, 195),  /* filesystem based device */
+  FH_NETDRIVE= FHDEV (DEV_VIRTFS_MAJOR, 194),
 
   DEV_FLOPPY_MAJOR = 2,
   FH_FLOPPY  = FHDEV (DEV_FLOPPY_MAJOR, 0),
